<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>ukf</name>
    <version>0.1.0</version>
    <description>Unscented Kalman Filter</description>

    <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/clydemcqueen/ukf.git</url>
    <url type="bugtracker">https://github.com/clydemcqueen/ukf/issues</url>

    <author>Clyde McQueen</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>eigen</depend>

    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>